<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/SPECKLE"
        android:layout_width="208dp"
        android:layout_height="114dp"
        android:contentDescription="@string/speckle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/ic_speckle_no" />

    <TextView
        android:id="@+id/LOGO_1"
        android:layout_width="208dp"
        android:layout_height="68dp"
        android:fontFamily="@font/work_sans_thin"
        android:text="@string/speckle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_dark_cian"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SPECKLE" />

    <TextView
        android:id="@+id/LOGO_2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:fontFamily="@font/work_sans_thin"
        android:text="@string/sensor"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_dark_cian"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/SPECKLE"
        app:layout_constraintEnd_toEndOf="@+id/LOGO_1"
        app:layout_constraintStart_toStartOf="@+id/LOGO_1"
        app:layout_constraintTop_toBottomOf="@+id/LOGO_1"
        app:layout_constraintVertical_bias="0.110000014" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/SINFOTON2_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_sinfoton2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/GDAF_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_gdaf" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/UC3M_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LOGO_2"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@drawable/logo_uc3m_2" />

</android.support.constraint.ConstraintLayout>